refactor: reorganize core into domain packages, remove unused modules
Package structure:
  column/     — Column, ColumnType (columnar storage GADT)
  dataset/    — Dataset, DatasetActions, DatasetExplainer, DataSource, MaterializedDataset
  expr/       — Expr (expression AST)
  interpreter/— DatasetInterpreter, ExprInterpreter, Interpreter
  params/     — AggSpec, KeySpec, SortSpec, WindowExprSpec, WindowSpec (was specs/)
  internal/   — ExprMacro, JoinOps (derivation + implementation details)
  types/      — ColumnIndex, Date, RowIndex (unchanged)
  errors/     — error types (unchanged)
  agg/        — AggBuilders (unchanged)

prelude.scala re-exports the full public API — external code using
`import net.ghoula.strongbow.prelude.*` is unaffected.

Removed modules:
  strongbow-columnar — empty, no source files
  strongbow-bench    — unused, depended on columnar